# asset-discovery-simulator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/simulate/: asset_simulator.rs  builder.rs  check_missing_assets.rs  error.rs  mod.rs  simulation.rs  types.rs  utils.rs
src/simulate/checkers/: erc20.rs  mod.rs  traits.rs
