[package]
name = "erc20-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-sol-types = "1.1.0"
eyre = "0.6.12"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
forge = {git = "https://github.com/foundry-rs/foundry.git", package = "forge"}
foundry-config = {git = "https://github.com/foundry-rs/foundry.git", package = "foundry-config"}
foundry-evm-core = {git = "https://github.com/foundry-rs/foundry.git", package = "foundry-evm-core"}
alloy-primitives = "1.1.0"
log        = "0.4"
thiserror  = "1.0"